# inclusive-scan

./: .gitignore  CMakeLists.txt  README.md  benchmark.cu  build.sh  build_and_run.sh  config.h  kernel.cu  kernel.cuh  kernel_template.cu.j2  main.cpp  optimize.py  prefix_sum.cu  pyproject.toml  run.sh  test.cpp  validate.cu
algorithms/: blelloch_scan.cu  lookback.cu
other_algorithms/: blelloch.cu  naive.cu
tuning/: kernel_template.cu.j2  optimize.py
visualization/: visualize_benchmark.py
